build_errors_3.txt
g++ : src/main.cpp: In function 'int 
main()':
En línea: 1 Carácter: 1
+ g++ src/main.cpp 
src/physics/PhysicsEngine.cpp 
src/physics/SpatialGri ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (src/main.cpp: In function '  
  int main()'::String) [], RemoteExc   
 eption
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
src/main.cpp:135:32: error: 
'MathUtils' has not been declared
  135 |             auto composition = 
MathUtils::scanMoleculeComposition(play
er.getTractor().getTargetIndex(), 
world.states, world.atoms);
      |                                
^~~~~~~~~
